# django-bulksms-bd

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
bulksms/: __init__.py  apps.py  client.py  exceptions.py  models.py  utils.py
bulksms/management/commands/: test_sms.py
examples/: django-integration.py  usage.py
tests/: test_client.py  test_utils.py
