[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Django-BulkSMS-BD"
dynamic = ["version"]
description = "A Django package for integrating with BulkSMSBD.net SMS API"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sharfuddin Shawon", email = "sharf@shawon.me"},
]
maintainers = [
    {name = "Sharfuddin Shawon", email = "sharf@shawon.me"},
]
keywords = [
    "django",
    "sms", 
    "bulksms",
    "bangladesh",
    "api",
    "messaging",
    "verification",
    "notifications",
    "OTP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1", 
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2,<5.1",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
    "mypy>=0.800",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
]
testing = [
    "pytest>=6.0",
    "pytest-django>=4.0", 
    "pytest-cov>=2.10",
    "factory-boy>=3.2",
    "responses>=0.18",
]

[project.urls]
Homepage = "https://github.com/sharf-shawon/django-bulksms-bd"
# Documentation = "https://django-bulksms-bd.readthedocs.io/"
Repository = "https://github.com/sharf-shawon/django-bulksms-bd.git"
"Bug Tracker" = "https://github.com/sharf-shawon/django-bulksms-bd/issues"
Changelog = "https://github.com/sharf-shawon/django-bulksms-bd/blob/main/CHANGELOG.md"

[project.scripts]
django-bulksms-bd = "bulksms.cli:main"

[tool.setuptools]
packages = ["bulksms"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "bulksms.__version__"}

[tool.setuptools.package-data]
bulksms = [
    "templates/**/*.html",
    "templates/**/*.txt", 
    "static/**/*.css",
    "static/**/*.js",
    "locale/*/LC_MESSAGES/*.po",
    "locale/*/LC_MESSAGES/*.mo",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = ["django"]
known_first_party = ["bulksms"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_no_return = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "bulksms.migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--verbose",
    "--tb=short", 
    "--strict-markers",
    "--cov=bulksms",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["bulksms"]
omit = [
    "bulksms/migrations/*",
    "bulksms/tests/*",
    "*/venv/*",
    "*/virtualenv/*", 
    "*/.venv/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]
