[metadata]
name = django-bulksms-bd
version = attr: bulksms.__version__
description = A Django package for integrating with BulkSMSBD.net SMS API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sharf-shawon/django-bulksms-bd
author = Sharfuddin Shawon
author_email = sharf@shawon.me
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    django
    sms
    bulksms
    bangladesh
    api
    messaging
    notifications

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2,<5.1
    requests>=2.25.0
    urllib3>=1.26.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-django>=4.0
    pytest-cov>=2.10
    black>=21.0
    flake8>=3.8
    isort>=5.0
    mypy>=0.800
    pre-commit>=2.0
docs =
    sphinx>=4.0
    sphinx-rtd-theme>=1.0
    sphinx-autodoc-typehints>=1.12
testing =
    pytest>=6.0
    pytest-django>=4.0
    pytest-cov>=2.10
    factory-boy>=3.2
    responses>=0.18

[options.entry_points]
console_scripts =
    django-bulksms-bd = bulksms.cli:main

[flake8]
max-line-length = 88
exclude = 
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    migrations,
    venv,
    .venv
ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
per-file-ignores =
    __init__.py:F401
    settings.py:E501

[isort]
profile = black
multi_line_output = 3
line_length = 88
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
known_django = django
known_first_party = bulksms
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.8
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

[mypy-bulksms.migrations.*]
ignore_errors = True

[coverage:run]
source = bulksms
omit = 
    bulksms/migrations/*
    bulksms/tests/*
    */venv/*
    */virtualenv/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*Protocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --cov=bulksms
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=85

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
